# cvxnmf

./: .clang-format  CMakeLists.txt  LICENSE  README.md  setup.py
bindings/: CMakeLists.txt  convex_nmf_bindings.cpp
bindings/convexnmf/: __init__.py
examples/: example_one.py  example_three.py  example_two.py
src/: CMakeLists.txt  convex_nmf.cpp  convex_nmf.hpp  progress_reporter.cpp  progress_reporter.hpp  projections.cpp  projections.hpp  root_finding.hpp  row_sparsifiers.cpp  row_sparsifiers.hpp  types.hpp
